# ucd-csci2312-pa1-1

./: CMakeLists.txt  Point.cpp  Point.h  README.md  area.cpp  main.cpp
